welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:28: error: not found: value faireV
  faireV()
  ^