welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def paint()
{
  baisseBrosse()
  leveBrosse()
}

def fairev()
{
  paint()
  avance()
  gauche()
  avance()
  paint()
  recule()
  droite()
  avance()
  paint()
  avance()
  avance()
  droite()
}

for (i<-1 to 4 )
{
  faireV()
}